fix: update .env example and docker compose files

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,11 @@ SEARCH_AI_MODEL="/app/models/Qwen2.5-14B-Instruct-Q5_K_M.gguf"
 # Gemini Option
 GEMINI_API_KEY=""
 USE_GEMINI="false"
+
+# Ports Mapping 
+CHROMA_PORT=8000 
+PORT=3745 
+BACKGROUND_JOBS_PORT=4000 
+ML_PORT=8765  
+REDIS_PORT=6379
+POSTGRES_PORT=5432  
