--- a/.env.system.example
+++ b/.env.system.example
@@ -1,54 +1,38 @@
 # System defaults for Docker services.
 # Only modify if you need custom internal paths, ports, or service configs.
 
-# DATABASE
-DATABASE_URL="postgresql://user:password@postgres:5432/app"
-POSTGRES_USER="user"
-POSTGRES_PASSWORD="password"
-POSTGRES_DB="app"
-PGDATA="/var/lib/postgresql/data/pgdata"
-POSTGRES_PORT="5432"
+# PostgreSQL connection settings for internal container communication (User and Password should be changed)
+DATABASE_URL=postgresql://user:password@postgres:5432/app
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=app
+PGDATA=/var/lib/postgresql/data/pgdata
 
-# REDIS
-REDIS_URL="redis://redis:6379"
-REDIS_HOST="redis"
-REDIS_PORT="6379"
+# Redis connection settings for caching and job queues
+REDIS_URL=redis://redis:6379
+REDIS_HOST=redis
 
+# ChromaDB settings for embeddings and semantic search
+CHROMA_HOST=chroma
+IS_PERSISTENT=TRUE
 
-# CHROMADB (Vector Database)
-CHROMA_HOST="chroma"
-CHROMA_PORT="8000"
-IS_PERSISTENT="TRUE"
+# ML service host for video processing and transcription
+ML_HOST=ml
 
+PROCESSED_VIDEOS_DIR=/app/data
+THUMBNAILS_PATH=/app/data/.thumbnails
+STITCHED_VIDEOS_DIR=/app/data/.stitched-videos
 
-# ML ANALYSIS SERVICE
-ML_HOST="ml"
-ML_PORT="8769"
-LOG_LEVEL="INFO"
-
-
-# INTERNAL STORAGE PATHS
-PROCESSED_VIDEOS_DIR="/app/data"
-THUMBNAILS_PATH="/app/data/.thumbnails"
-STITCHED_VIDEOS_DIR="/app/data/.stitched-videos"
+# Face recognition data directories
+FACES_DIR=/app/data/.faces
+UNKNOWN_FACES_DIR=/app/data/.unknown_faces
+KNOWN_FACES_FILE=/app/data/.faces.json
+KNOWN_FACES_FILE_LOADED=/app/data/.known_faces.json
 
 
-# FACE RECOGNITION DATA
-FACES_DIR="/app/data/.faces"
-UNKNOWN_FACES_DIR="/app/data/.unknown_faces"
-KNOWN_FACES_FILE="/app/data/.faces.json"
-KNOWN_FACES_FILE_LOADED="/app/data/.known_faces.json"
+BACKGROUND_JOBS_URL=http://background-jobs:4000
+NODE_ENV=production
+ANONYMIZED_TELEMETRY=FALSE
 
-
-# MODEL CACHE DIRECTORIES
-WHISPER_CACHE_DIR="/app/models"
-YOLO_CONFIG_DIR="/app/models/yolo"
-
-
-# SERVICE PORTS & URLS
-PORT="3745"
-BACKGROUND_JOBS_PORT="4000"
-BACKGROUND_JOBS_URL="http://background-jobs:4000"
-NODE_ENV="production"
-ANONYMIZED_TELEMETRY="FALSE"
-WEB_APP_URL="http://web:3745"
+# Web application endpoint (for internal API calls)
+WEB_APP_URL=http://web:3745
