--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
 services:
   background-jobs:
     restart: unless-stopped
-    image: ghcr.io/iliashad/edit-mind-background-jobs:${VERSION:-latest}
+    image: ghcr.io/iliashad/edit-mind-background-jobs:latest
     container_name: edit-mind-background-jobs
+    env_file:
+      - .env.system
+      - .env
     ports:
       - "${BACKGROUND_JOBS_PORT}:4000"
     depends_on:
@@ -14,20 +17,18 @@ services:
         condition: service_started
       ml:
           condition: service_started
-    env_file:
-      - .env
-      - .env.system
     networks:
       - app-network
     volumes:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
-      - .data:/app/data
+      - ../.data:/app/data
   web:
     restart: unless-stopped
-    image: ghcr.io/iliashad/edit-mind-web:${VERSION:-latest}
+    image: ghcr.io/iliashad/edit-mind-web:latest
     container_name: edit-mind-web
-    environment:
-      NODE_ENV: "production"
+    env_file:
+      - .env.system
+      - .env
     ports:
       - "${PORT}:3745"
     depends_on:
@@ -37,12 +38,9 @@ services:
         condition: service_started
       redis:
         condition: service_healthy
-    env_file:
-      - .env
-      - .env.system
     volumes:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
-      - .data:/app/data
+      - ../.data:/app/data
     networks:
       - app-network
 
@@ -50,12 +48,15 @@ services:
     image: chromadb/chroma:1.3.5
     container_name: edit-mind-chroma
     restart: unless-stopped
+    env_file:
+      - .env.system
+      - .env
     environment:
       CHROMA_CORS_ALLOW_ORIGINS: '["http://localhost:3745", "http://localhost:4000", "http://web:3745", "http://background-jobs:4000"]'
     ports:
-      - "${CHROMA_PORT:-8000}:8000"
+      - "${CHROMA_PORT}:8000"
     volumes:
-      - .data/chroma:/chroma/chroma
+      - ../.data/chroma:/chroma/chroma
     networks:
       - app-network
 
@@ -63,8 +64,11 @@ services:
     restart: unless-stopped
     image: redis:7
     container_name: edit-mind-redis
+    env_file:
+      - .env.system
+      - .env
     ports:
-      - "${REDIS_PORT}:6379"
+      - "${REDIS_PORT:-6379}:6379"
     volumes:
       - redis_data:/data
     networks:
@@ -80,14 +84,14 @@ services:
     container_name: edit-mind-postgres
     restart: unless-stopped
     env_file:
-      - .env
       - .env.system
+      - .env
     ports:
       - "${POSTGRES_PORT}:5432"
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
-      - .pgdata/:/var/lib/postgresql/data
+      - ../.pgdata/:/var/lib/postgresql/data
     networks:
       - app-network
     healthcheck:
@@ -96,24 +100,24 @@ services:
         - "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"
   ml:
     restart: unless-stopped
-    image: ghcr.io/iliashad/edit-mind-ml:${VERSION:-latest}
+    image: ghcr.io/iliashad/edit-mind-ml:latest
     container_name: edit-mind-ml
-    ports:
-      - "${ML_WS_PORT}:8765"
     env_file:
-      - .env
       - .env.system
+      - .env
+    ports:
+      - "${ML_PORT}:8765"
     environment:
-      LOG_LEVEL: "INFO"
       YOLO_CONFIG_DIR: /ml-models/ultralytics
       DEEPFACE_HOME: /ml-models/deepface
       TRANSCRIPTION_MODEL_CACHE: /ml-models/whisper
-    volumes:
-      - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
-      - ml-models:/ml-models:rw
-      - .data:/app/data
     networks:
       - app-network
+    volumes:
+      - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
+      - ml-models:/app/ml-models:rw
+      - ../.data:/app/data
+      - ../python:/app/python
 volumes:
   redis_data:
     driver: local
