--- a/apps/background-jobs/package.json
+++ b/apps/background-jobs/package.json
@@ -19,7 +19,16 @@
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
     "ioredis": "^5.4.2",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "search": "workspace:*",
+    "shared": "workspace:*",
+    "ai": "workspace:*",
+            "vector": "workspace:*",
+    "media-utils": "workspace:*",
+        "db": "workspace:*"
+,    "smart-collections": "workspace:*",
+ "immich": "workspace:*"
+
   },
   "devDependencies": {
     "@types/archiver": "^7.0.0",
