--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/iliashad/edit-mind"
   },
   "scripts": {
-    "build": "tsc --outDir dist",
+    "build": "tsc",
     "test": "vitest run",
     "test:ui": "vitest --ui"
   },
