--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -1,16 +1,19 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2019",
-    "module": "commonjs",
-    "lib": ["ES2019", "DOM"],
+    "target": "ES2020",
+    "module": "ESNext",
     "moduleResolution": "node",
-    "esModuleInterop": true,
+    "outDir": "./dist",
+    "rootDirs": ["./src", "../.."],
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "paths": {
-      "@db/*": ["../db/src/*"],
-      "@shared/*": ["../shared/src/*"]
-    }
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
