--- a/packages/smart-collections/package.json
+++ b/packages/smart-collections/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/iliashad/edit-mind"
   },
   "scripts": {
-    "build": "tsc --outDir dist"
+    "build": "tsc"
   },
   "dependencies": {
     "db": "workspace:*",
