--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -118,7 +118,7 @@ services:
     ports:
       - "${CHROMA_PORT}:8000"
     volumes:
-      - ../.data/chroma:/chroma/chroma
+      - ../.chroma:/chroma/chroma
     networks:
       - app-network-dev
 
