--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -70,7 +70,7 @@ services:
     ports:
       - "${CHROMA_PORT}:8000"
     volumes:
-      - ../.data/chroma:/chroma/chroma
+      - ../.chroma:/chroma/chroma
     networks:
       - app-network
 
