fix: update docker-compose command to use docker

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,12 +34,12 @@ jobs:
           cp .env.system.example docker/.env.system
 
       - name: Start Docker Compose web service
-        run: docker-compose up web -d
+        run: docker compose up web -d
         env:
           VERSION: test
 
       - name: Check service status
-        run: docker-compose ps
+        run: docker compose ps
 
       - name: Install dependencies
         run: pnpm install
@@ -59,4 +59,4 @@ jobs:
 
       - name: Stop containers
         if: always()
-        run: docker-compose down -v
+        run: docker compose down -v
