--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -66,6 +66,7 @@ services:
       - .env.system
       - .env
     environment:
+      IS_PERSISTENT: TRUE
       CHROMA_CORS_ALLOW_ORIGINS: '["http://localhost:3745", "http://localhost:4000", "http://web:3745", "http://background-jobs:4000"]'
     ports:
       - "${CHROMA_PORT}:8000"
@@ -137,7 +138,6 @@ services:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
       - ml-models:/app/ml-models:rw
       - ../.data:/app/data
-      - ../python:/app/python
 volumes:
   redis_data:
     driver: local
