fix: update chroma persist data dir

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -119,7 +119,7 @@ services:
     ports:
       - "${CHROMA_PORT}:8000"
     volumes:
-      - ../.chroma:/chroma/chroma
+      - ../.chroma:/data
     networks:
       - app-network-dev
 
