--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,12 @@ services:
       - .data:/app/data
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3745"]
+      interval: 10s
+      timeout: 5s
+      retries: 30
+      start_period: 60s
 
   chroma:
     image: chromadb/chroma:1.3.5
