--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Install playwright browsers
+        run: pnpm exec playwright install   
+
       - name: Run Playwright tests
         run: pnpm --filter web test
 
