--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -57,7 +57,12 @@ services:
       - ../.data:/app/data
     networks:
       - app-network
-
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3745/auth/login"]
+      interval: 10s
+      timeout: 30s
+      retries: 10
+      start_period: 60s
   chroma:
     image: chromadb/chroma:1.3.5
     container_name: edit-mind-chroma
