fix: update docker compose file port mapping, cache service and docker web file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - .env.system
       - .env
     ports:
-      - "${BACKGROUND_JOBS_PORT}:4000"
+      - "${BACKGROUND_JOBS_PORT}:${BACKGROUND_JOBS_PORT}"
     depends_on:
       postgres:
         condition: service_healthy
@@ -30,7 +30,7 @@ services:
       - .env.system
       - .env
     ports:
-      - "${PORT}:3745"
+      - "${PORT}:${PORT}"
     depends_on:
       postgres:
         condition: service_healthy
@@ -113,7 +113,7 @@ services:
       - .env.system
       - .env
     ports:
-      - "${ML_PORT}:8765"
+      - "${ML_PORT}:${ML_PORT}"
     environment:
       YOLO_CONFIG_DIR: /ml-models/ultralytics
       DEEPFACE_HOME: /ml-models/deepface
