--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -13,7 +13,7 @@ services:
       - .env.system
       - .env.dev
     ports:
-      - "${BACKGROUND_JOBS_PORT}:4000"
+      - "${BACKGROUND_JOBS_PORT}:${BACKGROUND_JOBS_PORT}"
     depends_on:
       postgres:
         condition: service_healthy
@@ -54,7 +54,7 @@ services:
       - .env.system
       - .env.dev
     ports:
-      - "${ML_PORT}:8765"
+      - "${ML_PORT}:${ML_PORT}"
     environment:
       YOLO_CONFIG_DIR: /ml-models/ultralytics
       DEEPFACE_HOME: /ml-models/deepface
@@ -82,7 +82,7 @@ services:
       - .env.system
       - .env.dev
     ports:
-      - "${PORT}:3745"
+      - "${PORT}:${PORT}"
     depends_on:
       postgres:
         condition: service_healthy
