--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - .env.system
       - .env
     ports:
-      - "${BACKGROUND_JOBS_PORT}:4000"
+      - "${BACKGROUND_JOBS_PORT}:${BACKGROUND_JOBS_PORT}"
     depends_on:
       postgres:
         condition: service_healthy
@@ -44,7 +44,7 @@ services:
       - .env.system
       - .env
     ports:
-      - "${PORT}:3745"
+      - "${PORT}:${PORT}"
     depends_on:
       postgres:
         condition: service_healthy
@@ -132,7 +132,7 @@ services:
       - .env.system
       - .env
     ports:
-      - "${ML_PORT}:8765"
+      - "${ML_PORT}:${ML_PORT}"
     environment:
       YOLO_CONFIG_DIR: /ml-models/ultralytics
       DEEPFACE_HOME: /ml-models/deepface
