fix: update workflow yml file

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,9 +93,13 @@ jobs:
           run: |
             cp .env.example docker/.env
             cp .env.system.example docker/.env.system
-            cat docker/.env
-            cat docker/.env.system
 
+            ENCRYPTION_KEY=$(openssl rand -base64 32)
+            SESSION_SECRET=$(openssl rand -hex 32)
+            
+            sed -i "s|SESSION_SECRET=\"\"|SESSION_SECRET=\"${SESSION_SECRET}\"|g" docker/.env
+            sed -i "s|ENCRYPTION_KEY=\"\"|ENCRYPTION_KEY=\"${ENCRYPTION_KEY}\"|g" docker/.env
+            
         - name: Start Docker Compose (web)
           run: cd docker && docker compose up web -d --wait --wait-timeout 200
 
