--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -141,8 +141,7 @@ jobs:
     name: Release Docker Images
     needs: test
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
       id-token: write
