--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,6 +120,9 @@ jobs:
         - name: Install Playwright browsers
           run: pnpm exec playwright install
 
+        - name: Install Playwright system dependencies
+          run: pnpm exec playwright install-deps
+
         - name: Run Playwright tests
           run: pnpm --filter web test
 
