--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -64,6 +64,7 @@
     "@types/compression": "^1.8.1",
     "@types/express": "^5.0.3",
     "@types/express-serve-static-core": "^5.0.7",
-    "@types/morgan": "^1.9.10"
+    "@types/morgan": "^1.9.10",
+    "@faker-js/faker": "^10.2.0"
   }
 }
