feat: add ml models cache for ultralytics , hugging face and torch

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -137,6 +137,8 @@ services:
       YOLO_CONFIG_DIR: /ml-models/ultralytics
       DEEPFACE_HOME: /ml-models/deepface
       TRANSCRIPTION_MODEL_CACHE: /ml-models/whisper
+      TORCH_HOME: /ml-models/torch  
+      HF_HOME: /ml-models/huggingface 
     networks:
       - app-network
     volumes:
