--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -11,7 +11,8 @@
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": ["./app/*"],
+      "@ui/*": ["../../packages/ui/src/*"]
     },
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
