--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "@shared/*": ["./packages/shared/src/*"],
       "@search/*": ["./packages/search/src/*"],
       "@smart-collections/*": ["./packages/smart-collections/src/*"],
-      "@immich/*": ["./packages/immich/src/*"]
+      "@immich/*": ["./packages/immich/src/*"],
+      "@ui/*": ["./packages/ui/src/*"]
     }
   },
   "exclude": ["node_modules", "**/dist", "**/node_modules"]
