--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,7 +41,9 @@
     "@react-router/express": "7.12.0",
     "compression": "^1.8.1",
     "express": "^5.1.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "react-hot-toast": "^2.6.0",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
