fix: mount ui package for dev

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -103,6 +103,7 @@ services:
       - ../packages/immich:/app/packages/immich
       - ../packages/search:/app/packages/search
       - ../packages/smart-collections:/app/packages/smart-collections
+      - ../packages/ui:/app/packages/ui
     networks:
       - app-network-dev
 
