--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.ref != 'refs/heads/main'
     permissions:
       contents: read
 
@@ -77,7 +78,8 @@ jobs:
       name: Playwright Tests
       needs: build
       runs-on: ubuntu-latest
-      timeout-minutes: 30
+      if: github.ref != 'refs/heads/main'
+      timeout-minutes: 35
 
       steps:
         - name: Checkout
@@ -159,7 +161,6 @@ jobs:
 
   release:
     name: Release Docker Images
-    needs: test
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
